Fixed css on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,25 @@ a.active {
     -ms-flex-pack: distribute;
     -webkit-justify-content: space-around;
     justify-content: space-around;
+    padding-bottom: 0;
+  }
+
+  footer {
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+  }
+
+  .wrapper {
+    -webkit-order: 3;
+    -ms-flex-order: 3;
+    order: 3;
+  }
+
+  nav {
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
   }
 
   .main-nav ul {
@@ -210,7 +229,7 @@ a.active {
     padding: 0.5rem;
   }
 
-  img {
+  .content-wrapper img {
     display: none;
   }
   svg {
